--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -5,8 +5,8 @@
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播回放】蔡英文高票连任 名家点评胜选关键</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/5/n11770292.md#1">苏州十全街发生大面积塌陷 店铺已搬空</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/8/n11776083.md#1">中共央视前主持人芮成钢近况被曝光</a><br>
-<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/5/n11770092.md#1">高速收费新系统启动 路费暴涨 民怨四起</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11786063.md#1">【拍案惊奇】蔡英文连任！北京的三层误判</a><br>
+<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/5/n11770092.md#1">高速收费新系统启动 路费暴涨 民怨四起</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11783300.md#1">美杀伊朗将军震慑中南海 传习招7常委紧急开会</a><br>
 <br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787934.md#1">李靖宇：台湾大选 中共成蔡英文“最大助选员”</a><br>
@@ -30,6 +30,8 @@
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/8/n11777957.md#1">年关难过 大陆网络公司新一波裁员潮来临</a><br>
 <br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11788275.md#1">114个耳光扇向国台办 李敖儿子微博被封号</a><br>
+<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787883.md#1">【十字路口】横扫817万票 蔡英文为何创记录</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11788195.md#1">中共官媒否认伊朗击落客机 闹国际笑话</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11788179.md#1">批中共不可靠 布拉格将与台北缔结姊妹城市</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11788171.md#1">港媒聚焦蔡英文高票连任的“香港因素”</a><br>
@@ -40,8 +42,6 @@
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11786579.md#1">【翻墙必看】分析：中共对台湾大选的误判</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787705.md#1">组图：台立委参选人谢票行程 拥抱与感谢</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11786567.md#1">神韵辉映欧洲最古老剧院 精英感恩神性内涵</a><br>
-<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787716.md#1">“神韵到来是应普庆的盛事” 圣荷西大爆满</a><br>
-<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787744.md#1">国民党败选 学者：改亲中反共才有胜算</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11788182.md#1">陆企2019境外债违约36亿美元  今年或更多</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787628.md#1">赤字多又缺钱 中共地方当局紧缩开支</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787227.md#1">美中签约后 三大因素或使中共承诺成空</a><br>
@@ -93,7 +93,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 349,717,269 人
+- 共 349,718,178 人
 ```
 </strong>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/30/n11754554.md#1">新元赋——退党中心2020新年寄语</a><br>
