--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,6 +30,7 @@
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/8/n11777957.md#1">年关难过 大陆网络公司新一波裁员潮来临</a><br>
 <br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11788435.md#1">姆钦：北京若再与伊朗交易 美制裁绝不松手</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787744.md#1">国民党败选 学者：改亲中反共才有胜算</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787883.md#1">【十字路口】横扫817万票 蔡英文为何创记录</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11788195.md#1">中共官媒否认伊朗击落客机 闹国际笑话</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787972.md#1">黄之锋：蔡英文胜选对香港人是一个宝贵时刻</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11786579.md#1">【翻墙必看】分析：中共对台湾大选的误判</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787705.md#1">组图：台立委参选人谢票行程 拥抱与感谢</a><br>
-<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11786567.md#1">神韵辉映欧洲最古老剧院 精英感恩神性内涵</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11788182.md#1">陆企2019境外债违约36亿美元  今年或更多</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/19/12/27/n11750385.md#1">中共在美国后院扮何角色？美将军揭内幕</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787628.md#1">赤字多又缺钱 中共地方当局紧缩开支</a><br>
