--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,6 +30,8 @@
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/8/n11777957.md#1">年关难过 大陆网络公司新一波裁员潮来临</a><br>
 <br><p><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787742.md#1">分析：反送中让中共在台情报系统崩坏</a><br>
+<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785154.md#1">蔡胜韩265万票 专家：台人用选票甩中共巴掌</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11788569.md#1">民进党大胜 国台办被点名批评 刘结一或不妙</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11788559.md#1">深圳现一例重症肺炎 外界质疑中共隐瞒疫情</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11788440.md#1">陆媒称柴油鱼是鱼喝柴油 网民：水污染所致</a><br>
@@ -40,8 +42,6 @@
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787883.md#1">【十字路口】横扫817万票 蔡英文为何创纪录</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11788195.md#1">中共官媒否认伊朗击落客机 闹国际笑话</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11788179.md#1">批中共不可靠 布拉格将与台北缔结姊妹城市</a><br>
-<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11788171.md#1">港媒聚焦蔡英文高票连任的“香港因素”</a><br>
-<a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11788163.md#1">遭港府拒绝入境 人权观察执行长现场直播</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11788182.md#1">陆企2019境外债违约36亿美元  今年或更多</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11788008.md#1">蔡英文高票当选 网络调侃央视主播“贡献”</a><br>
 <a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/12/n11787972.md#1">黄之锋：蔡英文胜选对香港人是一个宝贵时刻</a><br>
