--- a/gb/ncid277_2.md
+++ b/gb/ncid277_2.md
@@ -25,7 +25,7 @@
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11782820.md#1" target="_blank">港议员：面对中共 台湾选举是民主捍卫战</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11782820.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/c01249ef59805722da44dbcf77e326fc-150x120.jpg" align ="left"></a>中华民国总统、副总统暨立委选举1月11日登场，香港立法会议员朱凯迪在脸书表示，面对中共极权，每次台湾选举都是民主捍卫战。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 11:55 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780127.md#1" target="_blank">台湾选前之夜拼场 11日将选出新总统新国会</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/9/n11780127.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/978ca020c59573ce2f9a8cdd47040e86-150x120.jpg" align ="left"></a>中华民国大选进入冲刺阶段，三党总统候选人蔡英文、韩国瑜、宋楚瑜在选前之夜大拼场造势拉票。1月11日投票日，将选出中华民国新任总统、副总统与113位立法委员，最快明晚10时完成开票。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 11:54 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11782457.md#1" target="_blank">美媒专访蔡英文 聚焦中共侵蚀台湾民主自由</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11782457.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/989x768_017060270725-150x120.jpg" align ="left"></a>台湾总统蔡英文于去年10月接受“时代杂志”专访，专访内容于日前刊登。时代杂志引述蔡总统表示，中共加紧对新疆、香港的控制，并试图透过选举在自由的台湾如法炮制，但她会力阻这件事情的发生。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 11:44 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11782697.md#1" target="_blank">【专访】王定宇：反渗透法如何抵挡中共渗透（中）</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/10/n11782697.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15e88604530cb390_ttl7day4ea_20200110-____-DJY-___2-150x120.jpg" align ="left"></a>台湾立法委员、同时也是立法院外交及国防委员会召集委员王定宇接受《世界十字路口》频道专访，透露中共渗透与台湾反渗透的个中内幕。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 11:16 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11784473.md#1" target="_blank">【翻墙必看】伊朗将军被杀 传7常委急开会</a><br></h3>伊朗二号人物苏莱曼尼被美军击毙的突发新闻，在全球迅速传播。有海外中文媒体引述中南海知情人的消息说，为防暗杀和定点清除，中共领导人安保级别全天候提升至史上最高。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 8:47 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11785143.md#1" target="_blank">韩国瑜落后 里长：陌生年轻人全跑出来投票</a><br></h3>目前，国民党总统候选人韩国瑜一路落败蔡英文。有里长在投票结束后惊呼“吓死了”，陌生的年轻人全部跑出来投票了。有报导说，不少首投族暗示某人令亡国感暴增。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 8:30 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/11/n11784980.md#1" target="_blank">武汉肺炎病毒或来自蝙蝠 与SARS相似度近8成</a><br></h3>武汉市新型冠状病毒肺炎已出现首例死亡案例。1月11日，台湾卫福部疾管署表示，中共官方已公布新型冠状病毒基因序列，经比对，发现与蝙蝠冠状病毒相似度高达87%，与SARS相似度近8成。
 
