--- a/gb/news392_4.md
+++ b/gb/news392_4.md
@@ -19,7 +19,14 @@
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11766583.md#1" target="_blank">为何中国滑雪队的要求遭挪威图书馆强烈拒绝</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11766583.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2011/01/1101060640572357-150x120.jpg" align ="left"></a>中国人在西方自由民主的国家，竟然提出剥夺人们言论自由的要求，这是何等的荒谬和不可思议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 8:56 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11766427.md#1" target="_blank">张林：共军在朝鲜战争中丧生两百万（2）</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11766427.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Korean_War_Montage_2-600x350-600x350-1-150x120.png" align ="left"></a>章国隆说，更多共军生病发烧，死于途中。每次一个连队近百人从丹东出发，一个来回步行一个月左右，一般都有四分之一的减员，就是死于非命。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 4:39 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11766288.md#1" target="_blank">王友群：如何看中美将签署第一阶段贸易协议</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11766288.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1180494181-1-600x400-150x120.jpg" align ="left"></a>美国总统川普表示，1月15日，美中将在白宫举行第一阶段贸易协议签署仪式，他会亲自参加。稍后他将赴北京讨论第二阶段协议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 3:53 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11766346.md#1" target="_blank">颜丹：是谁造出了“善小而不为”的中国人？</a><br></h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/3/n11766346.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/A006005-600x400-150x120.jpg" align ="left"></a>要想走出黑暗，就得战胜魔鬼，至少不能再去充当魔鬼的信徒。而选择与中共切割，就是走向光明的开始。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 3:28 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/5/n11769912.md#1" target="_blank">郑纯清：恶党末日临 动辄挨掌嘴</a><br></h3>中共滑雪队，备战冬奥会。
+挪威梅洛克，训练地扬威。
+一进图书馆，气指充指挥。
+大法书下架，彰显实力锐。
+道是被发现，党妈要问罪。
+忘了在外国，还当大陆内。
+自然遭拒绝，经理回声脆。
+完全不可能，下架书不会。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 9:41 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/fcjmkl2375/djy/blob/master/gb/20/1/5/n11769903.md#1" target="_blank">关乐：就王志民下台寄语有良港警</a><br></h3>中南海招改，王志民被踹。
 恶党顶门棍，一折即远甩。
 张晓明或明，林郑恐也快。
