--- a/gb/ncid282_5.md
+++ b/gb/ncid282_5.md
@@ -22,7 +22,7 @@
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/21/n11737690.md#1" target="_blank">民主党弹劾川普 或反助其成功连任</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/21/n11737690.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/08/9A6A7260_e-150x120.jpg" align ="left"></a>美国股市上周不受众议院通过弹劾川普（特朗普）总统案的影响，三大股指气势如虹，市场人士普遍认为川普连任总统几无悬念。美国选民为何再给川普主掌白宫的机会？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 7:08 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/21/n11737465.md#1" target="_blank">陆童星培训藏陷阱 试镜背后是数万培训费</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/21/n11737465.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-494964966-150x120.jpg" align ="left"></a>“15万就白扔了，这件事情绝对是我这辈子办得最憋屈、最丢脸的事情了。”安安妈妈一提起在女儿小时候偶遇“星探”，进而交培训费的经历，就懊悔不已。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 1:51 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/21/n11737276.md#1" target="_blank">天然气太贵民众偷烧煤 中共官员强行封灶台</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/21/n11737276.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/7d45b3c9a3db24ea4013d87bd3eac9a9-150x120.jpg" align ="left"></a>为减少空污，中国华北地区近年强推煤改气、煤改电，禁止冬季燃煤取暖。但因为天然气、电费过高，一些民众仍偷偷烧煤，使得近日官民冲突升高，甚至有村干部强行进入民宅用水泥封死灶台。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 10:33 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/21/n11737087.md#1" target="_blank">【货币市场】 美股创历史最高 美元强势</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/21/n11737087.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/03/money-notes-150x120.jpg" align ="left"></a>在货币市场周五（美东时间12月20日）北美交易时段，美元展现强势，美元分别对日元、英镑和欧元升值。美元彭博现货指数收于 97.69点，高于一周前的收盘指数97.172点。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 9:19 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/25/n11745633.md#1" target="_blank">周杰伦MV奶茶店 大陆现110多家山寨门市</a><br></h3>由歌手周杰伦MV捧红的奶茶店，如今在中国遭到山寨包围。全中国目前有110多家山寨的“麦吉 machi machi”加盟店，上海、广州、深圳等地都有冒牌货。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 6:14 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/25/n11744043.md#1" target="_blank">每日三退声明精选（2019/12/24）</a><br></h3>出国旅游，国外的民主自由，中国的欺骗谎言，形成鲜明对比，声明退出少先队、共青团、共产党一切组织，不做它的牺牲品！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 11:42 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/25/n11744025.md#1" target="_blank">每日三退声明精选（2019/12/23）</a><br></h3>我从国内大量反人性的现实中认识到，无神论罪大恶极，中共才是最大的邪教，我声明自愿退出曾经入过的少先队，与之彻底决裂，争取光明的未来！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 11:28 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/22/n11738955.md#1" target="_blank">前华为工程师失去加国枫叶卡 面临遣返</a><br></h3>前中国电信巨头华为工程师张国东（Guodong Zhang，音译）从大陆移民加拿大后，因长期居住海外丢掉永久居民身份，面临被遣返回中国。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 8:42 AM							</td></tr>
