--- a/gb/nf3046_2.md
+++ b/gb/nf3046_2.md
@@ -7,6 +7,8 @@
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/11/22/n11673471.md#1" target="_blank">程晓容：国际风云印证《九评》精准论断</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/11/22/n11673471.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911120304312188-150x120.jpg" align ="left"></a>《九评》关乎中国和世界。这部巨著能够帮助人们深入了解中国现当代史及共产主义运动，从而对中共的言行及动机做出清醒的判断。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月22日 4:45 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/11/19/n11666092.md#1" target="_blank">九评15周年 看大陆民众弃中共 句句真情</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/11/19/n11666092.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/a9001d8cd57c0fd94b9b45db8a1c1bc6-600x399-150x120.jpg" align ="left"></a>15年前，大纪元在2004年11月19日发表了《九评共产党》系列社论，使广大民众第一次深刻和全面地了解中共的丑陋历史和邪恶本质，从而走上抛弃中共的自救之路——三退（退出中共党、团、队组织）。如今3亿4千多万的民众声明退出中共的一切组织，走向新生。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 9:33 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/11/19/n11666926.md#1" target="_blank">《九评》发表15周年 加拿大各界华人在觉醒</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/11/19/n11666926.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/04-1-1-150x120.jpg" align ="left"></a>2004年11月19日，《大纪元时报》系列社论《九评共产党》（简称《九评》）横空出世，被世人喻为旷世奇书，并打出“天灭中共”的震世警言，引发了持续15年的“三退”（退共产党、退共青团、退少先队）大潮。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 4:16 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/5/n11701627.md#1" target="_blank">每日三退声明精选（2019/12/04）</a><br></h3>从近几个月香港的反送中运动，看出港府与中共的残暴，暴露出其流氓本性的一面。同时也让我看到美国政府和人民善良友好、尊重人权民主的普世价值的立国理念。我决定不与邪恶为伍，站在正义者一边，退出邪恶的团、队组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 10:36 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/4/n11699099.md#1" target="_blank">每日三退声明精选（2019/12/03）</a><br></h3>我的父亲在毛贼东及中共的欺骗下曾为中共军队作战一度几乎成为了中共的炮灰。中共野蛮地所做所为为全世界人民所震惊。中国人民只有彻底推翻共产党才能看到希望。中共在多年的统治中残害了大量无辜的百姓，吞噬了大量无辜的生命。我很高兴未曾加入过邪恶的中国共产党。在此强烈声明立刻退出中国少先队、中国共青团和中共匪的任何一切组织。我要做一个清清白白的人。希望正义的美国和善良的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 10:59 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/3/n11696580.md#1" target="_blank">每日三退声明精选（2019/12/02）</a><br></h3>看了大纪元的《九评共产党》感到非常的震惊，我为党工作了一生而且大部分工作都是从事党务工作，却不知它如此的邪恶，多可悲呀！现在我醒悟了，我不能做邪教的一份子，现在我郑重声明：退出共产党、共青团和少先队等一切邪恶组织，清除兽的印记。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 10:46 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/2/n11694217.md#1" target="_blank">每日三退声明精选（2019/12/01）</a><br></h3>我没有修炼法轮大法，但看过一遍《转法轮》，知道法轮大法好，炼法轮功的人都是些好人，共产党迫害法轮功学员，打死、打残、打伤那么多好人，真是罪恶滔天。我早就不相信共产党了，它的本性就是假、恶、斗。我郑重声明：退出红小兵和少先队组织！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 12:14 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/11/29/n11688779.md#1" target="_blank">每日三退声明精选（2019/11/28）</a><br></h3>本人在二十多岁时入党，因年轻无知，对共产党的面目认识不清。随着年龄渐长，尤其出国以后，获得更多资讯，了解到该党对西藏人、新疆人、香港人以及部分大陆人的所作所为，对人权的侵害怵目惊心。我为自己是该党成员感到羞耻。我声明，自2019年11月28日起，本人自愿退出共产党，不再是该党成员。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 11:29 AM							</td></tr>
@@ -42,7 +44,5 @@
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/11/8/n11641035.md#1" target="_blank">每日三退声明精选（2019/11/07）</a><br></h3>从小的时候就听共产党的教育，后来到了中学时期，从中共的腐败的的事情看出这个政权完全是欺骗这片土地上的人们的伪政权，在私下里拜访过受中共迫害的人，才知这个政权岂止是劣迹斑斑，简直就是罪恶滔天、罄竹难书、人神共愤。现声明与中共势不两立。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月08日 11:45 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/11/6/n11636744.md#1" target="_blank">参考资料：纵观天下（2019年11月传单/传真）</a><br></h3>纽约金秋大游行 华人踊三退 证人披露活摘器官黑幕 退团 退队 互联网大会 与会者翻墙成奇观 中共“老区”退党潮 洗脑教育害少儿......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月06日 3:27 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/11/6/n11636257.md#1" target="_blank">每日三退声明精选（2019/11/05）</a><br></h3>我是一名地方上的公务员，当秘书的时候每晚跑酒场，偶尔没事还得随时恭候领导征召救场。喝酒喝得酒精肝，脾肿大，还有一次胃出血。最常跑的是接待，省上下来的都似钦差御史，再小的官都得忙不迭地陪着。大官的圈子云山雾绕，别有洞天，一般人没机会一窥其奸，我们只能陪些小官。那些个衣冠楚楚装腔作势的在省上处于食物链下端，也是整日被人呼来喝去，家素厚藏的被领导从头到脚撸过几遍猛.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月06日 10:45 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/11/5/n11633886.md#1" target="_blank">每日三退声明精选（2019/11/04）</a><br></h3>我以前入过团，因为执行计划生育政策无知地干了伤天理的事，无知中造了很多罪业。父亲是地下党，可是后来被共产党整，所以我看透了，共产党就是黑帮恶霸，从来都是祸害老百姓的，今天在此郑重声明：退出共产党的团、队组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月05日 11:15 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/11/4/n11631504.md#1" target="_blank">每日三退声明精选（2019/11/03）</a><br></h3>入队时小孩子无法自主，入团从未考虑，因为太多丑恶，入党为了养家糊口，但从未做过亏心事，一直与人为善，助人为乐，现为了家庭的将来，声明退党、退队。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月04日 11:30 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/nf3046.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/nf3046.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/nf3046_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/nf3046_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/nf3046_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/nf3046_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/nf3046_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/nf3046_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/nf3046_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/nf3046_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/nf3046_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/qgedzr297/djy/blob/master/gb/nf3046_2.md#1<br><a href="https://github.com/qgedzr297/djy/blob/master/gb/nf3046_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/qgedzr297/djy/blob/master/gb/nf3046_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nf3046_2.htm">http://www.epochtimes.com/gb/nf3046_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
