--- a/gb/nf3046_3.md
+++ b/gb/nf3046_3.md
@@ -28,7 +28,8 @@
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/10/5/n11570031.md#1" target="_blank">朱婉琪：21世纪人类共同结束中共暴政</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/10/5/n11570031.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/12/PO_X5320-150x120.jpg" align ="left"></a>十一国殇日70周年，台湾法轮功人权律师团发言人朱婉琪表示，在中国大陆有三亿四千多万民众宣布退出共产党、共青团、少先队组织，而且去共化已成全球趋势。她呼吁，21世纪人类共同结束中共暴政。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月06日 3:30 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/10/5/n11569991.md#1" target="_blank">汪志远：全民反共反迫害开始了</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/10/5/n11569991.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/190426121648100699-150x120.jpg" align ="left"></a>10月1日是十一国殇日70周年，追查迫害法轮功国际组织主席汪志远，在法轮功反迫害20周年香港集会上录音发言说，在中国大陆有三亿四千多万民众宣布三退与中共决裂。在海外以美中贸易战为代表的全球去共排共大潮迅猛地掀起等，都表明全民反共反迫害开始了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月05日 11:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/10/5/n11569920.md#1" target="_blank">易蓉：退党大潮为中华民族带来新生曙光</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/10/5/n11569920.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/1907181621001973-150x120.jpg" align ="left"></a>2019年10月1日是十一国殇日70周年，全球退出中共服务中心主席易蓉，在法轮功反迫害20周年香港集会上录音发言表示，有三亿四千多万中国民众已选择唾弃中共，也标志着退党大潮正在为中华民族带来新生的曙光。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月05日 5:23 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/10/1/n11559279.md#1" target="_blank">中共窃政70年 中华儿女声明退党团少先队</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/10/1/n11559279.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/130518194335815-150x120.jpg" align ="left"></a>中共建政70周年之际，许多大陆民众看清了中共的真面目，不希望与中共捆绑、为伍作恶，纷纷在大纪元退党网站上声明退出中国共产党、团、少先队。该网站自2004年12月开通以来，已经累积了3亿4千多万人声明退出中共一切组织。一位不具名的红二代向大纪元表示，近期香港事件让人看出中共邪恶本质，是退党的催化剂。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月05日 2:32 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/11/5/n11633886.md#1" target="_blank">每日三退声明精选（2019/11/04）</a><br></h3>我以前入过团，因为执行计划生育政策无知地干了伤天理的事，无知中造了很多罪业。父亲是地下党，可是后来被共产党整，所以我看透了，共产党就是黑帮恶霸，从来都是祸害老百姓的，今天在此郑重声明：退出共产党的团、队组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月05日 11:15 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/11/4/n11631504.md#1" target="_blank">每日三退声明精选（2019/11/03）</a><br></h3>入队时小孩子无法自主，入团从未考虑，因为太多丑恶，入党为了养家糊口，但从未做过亏心事，一直与人为善，助人为乐，现为了家庭的将来，声明退党、退队。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月04日 11:30 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/11/2/n11629156.md#1" target="_blank">每日三退声明精选（2019/11/02）</a><br></h3>我是一名小食品经营者，眼下老百姓真的是太不容易了，我和老公一天只睡四个小时，从早忙到晚，也没啥积蓄，中共邪党的贪官一贪就是百万、千万的甚至上亿，老百姓咋办啊！在此，我声明退出中共邪党的少先队邪恶组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月03日 12:17 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/11/2/n11628455.md#1" target="_blank">每日三退声明精选（2019/11/01）</a><br></h3>年少时缺乏对世界的认知，被教唆下加入了共青团。年龄增长，接触到更多事物，渐渐了解到共产党及其相关组织邪恶的真实面目。作为具备公民意识的人，应当远离作恶的组织，在此，我谨代表我自己退出中国共青团。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月02日 12:40 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/11/1/n11626309.md#1" target="_blank">每日三退声明精选（2019/10/31）</a><br></h3>上学时，我受蒙骗，加入了共青团和少先队。工作后，我逐渐看清了共产党欺骗成性、颠倒黑白、贪污腐败的嘴脸，深恶痛绝。我爷爷是国民党军官，1949年去了台湾，我奶奶带着我父亲等留在老家。我奶奶为了保护家人，被迫捐出了所有土地，可是我的父亲还是被剥夺了上学的机会。如今，共产党要拆除我的祖宅，在原址修建假的古宅，发展古镇经济。我们欲哭无泪，即将痛失家园，却无处伸冤。一.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月01日 11:43 AM							</td></tr>
@@ -50,6 +51,5 @@
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/10/10/n11579638.md#1" target="_blank">每日三退声明精选（2019/10/09）</a><br></h3>我是大陆某著名风景区的居民，在外地做生意多年后回家，想申请在自己的宅基地上盖房子，没想到村干部说不行，后来再申请，村干部说拿过来一万块后再说。这些村干部家里的钱都花不完还给家人整上低保，村里的贫困户申请低保却整不来。这就是当今中国大陆的世道，老百姓无处伸冤，可以说中共邪党就是当今中国最大的黑社会，在此，我声明退出中共邪党的少先队等邪恶组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月10日 10:08 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/10/9/n11577482.md#1" target="_blank">每日三退声明精选（2019/10/08）</a><br></h3>年少无知，被择入党，虽对形式化流程和众多事件模糊的新闻观点甚感蹊跷，心有疑惑，也只能且信之。如今明白很多的真相，在此声明：愿集权统治尽早消失，愿我中华人民获得天赋人权，愿全世界人民幸福安康。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月09日 11:18 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/10/7/n11572771.md#1" target="_blank">每日三退声明精选（2019/10/06）</a><br></h3>本人自从上小学以来，一直受共匪的洗脑，在学校要系红领巾，上思想品德课的时候，几乎都是洗脑，都要学习共产党标榜的那些所谓的“英雄人物”，例如雷锋、周恩来等等。上了初中以后，虽然不系红领巾了，但是学校里时不时进行思想政治课的教育，总是说共产党多好多好。我爷爷那个时候，正经历文革，当时死了很多人，但是课本上从来都不提，老师也是从来都不讲。学校还骗我入团！这两年来.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月07日 10:41 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/10/4/n11568612.md#1" target="_blank">每日三退声明精选（2019/10/04）</a><br></h3>中共在中国大陆邪恶统治七十年来，推行阶级斗争，维护独裁统治，犯下了灭绝人性的滔天罪行，至今还不想悔改，人心丧失。我决心与其划清界限，粛清其流毒，清清白白重新做人。在此我郑重声明：即日起坚决退出我曾经加入过的中国少年先锋队、中国共产主义青年团、中国共产党组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月05日 12:47 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/nf3046_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/nf3046.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/nf3046_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/nf3046_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/nf3046_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/nf3046_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/nf3046_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/nf3046_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/nf3046_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/nf3046_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/nf3046_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/qgedzr297/djy/blob/master/gb/nf3046_3.md#1<br><a href="https://github.com/qgedzr297/djy/blob/master/gb/nf3046_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/qgedzr297/djy/blob/master/gb/nf3046_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nf3046_3.htm">http://www.epochtimes.com/gb/nf3046_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
