--- a/gb/nf3046_5.md
+++ b/gb/nf3046_5.md
@@ -4,15 +4,8 @@
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/8/13/n11449390.md#1" target="_blank">网民白宫请愿连署：将中共定为恐怖组织</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/8/13/n11449390.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/CCP-150x120.jpg" align ="left"></a>有鉴于香港局势恶化、港警暴力升级，有民众在美国白宫请愿网站“我们人民”（We the People）发起征签活动，要求美国政府正式将幕后黑手中国共产党定为恐怖组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月20日 1:00 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/8/13/n11450650.md#1" target="_blank">白宫请愿连署  将中共定为恐怖组织</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/8/13/n11450650.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/9ca38853a9d3c7fedfdac1e3ab308a9e-150x120.png" align ="left"></a>有鉴于香港局势恶化、港警暴力升级，有民众在美国白宫请愿网站“我们人民”（We the People）发起征签活动，要求美国政府正式将幕后黑手中国共产党定为恐怖组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月20日 12:30 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/7/3/n11362476.md#1" target="_blank">世界各地景点上 那些中国人的故事</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/7/3/n11362476.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/313042_medium-150x120.jpg" align ="left"></a>有这样一群信仰“真、善、忍”的人们，他们遍布于世界各地，长年坚守在著名的风景点。他们的信息台、展板、横幅形成一道道独特的“风景点”，吸引了成千上万的大陆游客。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月05日 10:22 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/7/23/n11404210.md#1" target="_blank">期刊：《九评特刊》164期</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/7/23/n11404210.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/A4-164-1-150x120.jpg" align ="left"></a>
-
-跨页尺寸点击下载a3-164
-
-单页尺寸点击下载a4-164
-
-       
-
-&nbsp;......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月23日 8:19 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/9/2/n11492770.md#1" target="_blank">每日三退声明精选（2019/09/01）</a><br></h3>共匪从1949年窃国，到如今已经70年了，人们在共产党的邪恶统治下忍受了70年，抗日时，马被八路军以抗日的名义牵走，文革时，把毛邪灵供奉在墙上，真神的画像却丢掷一旁。毛不信神，却让人拜他，瞻仰他，毛向红卫兵高呼万岁，邪恶的共产党以此毒害了很多人，老一辈的长辈不愿谈起过去的事情，是因为现在邪党歪风横行，有价值的人，得不到释放，在牢狱中度过最美丽的年纪，没价值的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月02日 11:28 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/8/31/n11489622.md#1" target="_blank">每日三退声明精选（2019/08/30）</a><br></h3>从香港这个第一个采行一国两制的地方，我们看到了当共产党一步一步的渗透香港后，香港人的惊恐，他们从来没有生活在共产主义社会下，现在他们发觉一切都变了，也真正感受到失去了自由民主的可怕，我明白了共产党的邪恶，那么的隐蔽，背地里却做了那么多坏事，对国内大行封锁，这不是很可耻吗？还有谁想被骗？在此声明退出少先队、共青团、共产党，永远不再和中共邪党有任何瓜葛，期盼自由.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月31日 11:26 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/8/29/n11484716.md#1" target="_blank">每日三退声明精选（2019/08/28）</a><br></h3>我知道共产党的谎言建国、六四屠杀的罪恶，听说活摘器官的事情，我老家四川，三峡大坝切断龙脉，我老妈都知道。搞得我们四川总是地震泥石流。我退出少先队、红领巾，废除毒誓。法轮功学员信佛，说的是真话。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月29日 11:37 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/8/28/n11482270.md#1" target="_blank">每日三退声明精选（2019/08/27）</a><br></h3>在国内不知怎么退，只有来这里退。这个组织只为上级服务，缺少法治，缺少人性，缺少人权，与世界文明相悖而驰。这样的组织还要强硬地控制十多亿人。不想同流合污。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月28日 11:20 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/8/25/n11475751.md#1" target="_blank">每日三退声明精选（2019/08/24）</a><br></h3>我们在媒体、军队多年工作，看透了中共邪恶、无耻、欺骗.....，让14亿人民受苦受难，民不聊生，真是罪大恶极！我们郑重宣布退出中共党、青年团、少先队邪恶组织！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月25日 11:07 AM							</td></tr>
@@ -39,6 +32,5 @@
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/7/27/n11412484.md#1" target="_blank">每日三退声明精选（2019/07/26）</a><br></h3>我是一名退休机关干部，很高兴在外出考察专案过程中，听到三退保平安的事，中共邪党就应了老百姓的话了“见过骗子，但是没见过象中共邪党这样的骗子，见过耍流氓的，没见过中共邪党这样耍流氓的”，眼下香港也乱了，哪里有它，哪里就出事，中共邪党就是流氓就是恶棍，眼下中共邪党就是世界第一贪腐邪党，我听说瑞士银行要对存在那里的中共邪党贪污官员财产曝光，中共邪党的外交部竟然指责.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月27日 11:21 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/7/26/n11410074.md#1" target="_blank">每日三退声明精选（2019/07/25）</a><br></h3>前几天从网上下载了VPN，打算翻墙到Youtube看有关最近香港游行的新闻，没想到我无意中还看到了一些有关六四事件的视频，好奇心驱使之下我点进去看了。后来我又一口气看完了很多有关中共的纪录片，以及《九评共产党》的文章。看完之后，我从小到大所坚信的知识都被彻底颠覆了。今天，我终于下定决心，特此与中共划清界限，声明退出共青团！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月26日 11:08 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/7/24/n11405499.md#1" target="_blank">每日三退声明精选（2019/07/23）</a><br></h3>很多人在学校时候受过洗脑，甚至入党都是内部推荐，引以为“荣”，后来步入社会，学会独立思考。越来越觉得以前受之迷惑，但是我相信很多党员都是无辜的，大部分做坏事的都是体制内的人，像我们这些体制外的党员大部分并不坏，更没有做过坏事，甚至很多心存善念，希望迎来民主。也希望你们能为民主事业做更多贡献，早日搞走黑暗和魔鬼。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月24日 11:52 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/7/22/n11400873.md#1" target="_blank">每日三退声明精选（2019/07/21）</a><br></h3>中共现在把中国搞的乌烟瘴气，贪官遍地，空气污染严重，水质恶化严重，豆腐渣工程，黑心地沟油，毒奶粉，假预苗，有毒食品泛滥，P2P爆雷，现在好多银行都倒闭关门了，中共却还在欺骗我们，中共干的坏事实在是太多太多，把全中国搞的生灵涂炭。我声明退出中共少先队及一切邪恶组织！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月22日 11:10 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/nf3046_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/nf3046.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/nf3046_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/nf3046_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/nf3046_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/nf3046_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/nf3046_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/nf3046_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/nf3046_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/nf3046_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/nf3046_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/qgedzr297/djy/blob/master/gb/nf3046_5.md#1<br><a href="https://github.com/qgedzr297/djy/blob/master/gb/nf3046_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/qgedzr297/djy/blob/master/gb/nf3046_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nf3046_5.htm">http://www.epochtimes.com/gb/nf3046_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
